<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calendarPublicAppointmentsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calendar.fragments.CalendarActivityPublicAppointmentsFragment">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/calendarActivityPublicAppointmentSwipeScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarActivityPublicAppointmentsSortLayout">

        <ScrollView
            android:id="@+id/calendarActivityPublicAppointmentScroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/calendarActivityPublicAppointmentsScrollLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/todayDatePublicAppointmentsCalendarActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/calendarActivityPublicAppointmentsGuidelineAt20pourcent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/activityCalendarDayPublicAppointments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/calendarActivityTodayDatePublicAppointments"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/activityCalendarMonthPublicAppointments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/calendarActivityTodayDatePublicAppointments"
            app:layout_constraintTop_toBottomOf="@id/activityCalendarDayPublicAppointments"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/activityCalendarMonthPublicAppointments"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/calendarActivityPublicAppointmentsGuidelineAtBeginning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/calendarActivityPublicAppointmentsGuidelineAt20pourcent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.15" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calendarActivityPublicAppointmentsCourseLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/calendarActivityPublicAppointmentsSortLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todayDatePublicAppointmentsCalendarActivity">

        <Button
            android:id="@+id/calendarActivityPublicAppointmentsFilterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/calendarActivityPublicAppointmentsFilter" />

        <AutoCompleteTextView
            android:id="@+id/calendarActivityPublicAppointmentsEditTxtCourse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/calendarActivityPublicAppointmentsCourse"
            app:layout_constraintEnd_toStartOf="@id/calendarActivityPublicAppointmentsFilterBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calendarActivityPublicAppointmentsSortLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/calendarActivityPublicAppointmentsCourseLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarActivityPublicAppointmentsCourseLayout">

        <Spinner
            android:id="@+id/sortPublicAppointmentsSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/sortPublicAppointmentsSpinner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>