...
    tools:context=".calendar.CalendarActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/calendarActivityTabs"
        android:layout_width="419dp"
        android:layout_height="57dp"
        app:layout_constraintBottom_toTopOf="@+id/calendarActivityPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/calendarActivityMyAppointments"
...
